pass explicit notebook name

--- a/notebooks/search/00-quick-start.ipynb
+++ b/notebooks/search/00-quick-start.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "WHC3hHGW-wbI",
    "metadata": {
     "id": "WHC3hHGW-wbI"
@@ -156,7 +156,7 @@
     "!curl -O -s https://raw.githubusercontent.com/miguelgrinberg/elasticsearch-labs/notebook-telemetry/telemetry/telemetry.py\n",
     "from telemetry import enable_telemetry\n",
     "\n",
-    "enable_telemetry(client)"
+    "enable_telemetry(client, \"00-quick-start\")"
    ]
   },
   {
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "25c618eb",
    "metadata": {
     "colab": {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "_OAahfg-tqrf",
    "metadata": {
     "colab": {
@@ -243,7 +243,7 @@
        "ObjectApiResponse({'acknowledged': True})"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "6bc95238",
    "metadata": {
     "id": "6bc95238"
@@ -276,7 +276,7 @@
        "ObjectApiResponse({'acknowledged': True, 'shards_acknowledged': True, 'index': 'book_index'})"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "008d723e",
    "metadata": {
     "id": "008d723e"
@@ -322,10 +322,10 @@
     {
      "data": {
       "text/plain": [
-       "ObjectApiResponse({'took': 49, 'errors': False, 'items': [{'index': {'_index': 'book_index', '_id': 'HwOa7osBiUNHLMdf3q2r', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 1, 'failed': 0}, '_seq_no': 0, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'IAOa7osBiUNHLMdf3q2r', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 1, 'failed': 0}, '_seq_no': 1, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'IQOa7osBiUNHLMdf3q2r', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 1, 'failed': 0}, '_seq_no': 2, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'IgOa7osBiUNHLMdf3q2r', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 1, 'failed': 0}, '_seq_no': 3, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'IwOa7osBiUNHLMdf3q2r', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 1, 'failed': 0}, '_seq_no': 4, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'JAOa7osBiUNHLMdf3q2r', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 1, 'failed': 0}, '_seq_no': 5, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'JQOa7osBiUNHLMdf3q2r', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 1, 'failed': 0}, '_seq_no': 6, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'JgOa7osBiUNHLMdf3q2r', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 1, 'failed': 0}, '_seq_no': 7, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'JwOa7osBiUNHLMdf3q2r', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 1, 'failed': 0}, '_seq_no': 8, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'KAOa7osBiUNHLMdf3q2r', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 1, 'failed': 0}, '_seq_no': 9, '_primary_term': 1, 'status': 201}}]})"
+       "ObjectApiResponse({'errors': False, 'took': 88, 'items': [{'index': {'_index': 'book_index', '_id': 'caRpvY4BKY8PuI1qPluy', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 0, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'cqRpvY4BKY8PuI1qPluy', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 1, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'c6RpvY4BKY8PuI1qPluy', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 2, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'dKRpvY4BKY8PuI1qPluy', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 3, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'daRpvY4BKY8PuI1qPluy', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 4, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'dqRpvY4BKY8PuI1qPluy', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 5, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'd6RpvY4BKY8PuI1qPluy', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 6, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'eKRpvY4BKY8PuI1qPluy', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 7, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'eaRpvY4BKY8PuI1qPluy', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 8, '_primary_term': 1, 'status': 201}}, {'index': {'_index': 'book_index', '_id': 'eqRpvY4BKY8PuI1qPluy', '_version': 1, 'result': 'created', 'forced_refresh': True, '_shards': {'total': 2, 'successful': 2, 'failed': 0}, '_seq_no': 9, '_primary_term': 1, 'status': 201}}]})"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "f12ce2c9",
    "metadata": {
     "id": "f12ce2c9"
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "Df7hwcIjYwMT",
    "metadata": {
     "colab": {
@@ -416,16 +416,16 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ID: JwOa7osBiUNHLMdf3q2r\n",
+      "ID: eaRpvY4BKY8PuI1qPluy\n",
       "Publication date: 2008-05-15\n",
       "Title: JavaScript: The Good Parts\n",
       "Summary: A deep dive into the parts of JavaScript that are essential to writing maintainable code\n",
       "Publisher: oreilly\n",
       "Reviews: 51\n",
       "Authors: ['douglas crockford']\n",
-      "Score: 0.80428284\n",
+      "Score: 0.8042828\n",
       "\n",
-      "ID: IwOa7osBiUNHLMdf3q2r\n",
+      "ID: daRpvY4BKY8PuI1qPluy\n",
       "Publication date: 2015-03-27\n",
       "Title: You Don't Know JS: Up & Going\n",
       "Summary: Introduction to JavaScript and programming as a whole\n",
@@ -434,7 +434,7 @@
       "Authors: ['kyle simpson']\n",
       "Score: 0.6989136\n",
       "\n",
-      "ID: JAOa7osBiUNHLMdf3q2r\n",
+      "ID: dqRpvY4BKY8PuI1qPluy\n",
       "Publication date: 2018-12-04\n",
       "Title: Eloquent JavaScript\n",
       "Summary: A modern introduction to programming\n",
@@ -443,25 +443,25 @@
       "Authors: ['marijn haverbeke']\n",
       "Score: 0.6796988\n",
       "\n",
-      "ID: HwOa7osBiUNHLMdf3q2r\n",
+      "ID: caRpvY4BKY8PuI1qPluy\n",
       "Publication date: 2019-10-29\n",
       "Title: The Pragmatic Programmer: Your Journey to Mastery\n",
       "Summary: A guide to pragmatic programming for software engineers and developers\n",
       "Publisher: addison-wesley\n",
       "Reviews: 30\n",
       "Authors: ['andrew hunt', 'david thomas']\n",
-      "Score: 0.62065494\n",
+      "Score: 0.6206549\n",
       "\n",
-      "ID: KAOa7osBiUNHLMdf3q2r\n",
+      "ID: eqRpvY4BKY8PuI1qPluy\n",
       "Publication date: 2012-06-27\n",
       "Title: Introduction to the Theory of Computation\n",
       "Summary: Introduction to the theory of computation and complexity theory\n",
       "Publisher: cengage learning\n",
       "Reviews: 33\n",
       "Authors: ['michael sipser']\n",
-      "Score: 0.6008769\n",
+      "Score: 0.60087687\n",
       "\n",
-      "ID: JgOa7osBiUNHLMdf3q2r\n",
+      "ID: eKRpvY4BKY8PuI1qPluy\n",
       "Publication date: 2011-05-13\n",
       "Title: The Clean Coder: A Code of Conduct for Professional Programmers\n",
       "Summary: A guide to professional conduct in the field of software engineering\n",
@@ -470,7 +470,7 @@
       "Authors: ['robert c. martin']\n",
       "Score: 0.571234\n",
       "\n",
-      "ID: JQOa7osBiUNHLMdf3q2r\n",
+      "ID: d6RpvY4BKY8PuI1qPluy\n",
       "Publication date: 1994-10-31\n",
       "Title: Design Patterns: Elements of Reusable Object-Oriented Software\n",
       "Summary: Guide to design patterns that can be used in any object-oriented language\n",
@@ -479,32 +479,32 @@
       "Authors: ['erich gamma', 'richard helm', 'ralph johnson', 'john vlissides']\n",
       "Score: 0.56499225\n",
       "\n",
-      "ID: IQOa7osBiUNHLMdf3q2r\n",
+      "ID: c6RpvY4BKY8PuI1qPluy\n",
       "Publication date: 2020-04-06\n",
       "Title: Artificial Intelligence: A Modern Approach\n",
       "Summary: Comprehensive introduction to the theory and practice of artificial intelligence\n",
       "Publisher: pearson\n",
       "Reviews: 39\n",
       "Authors: ['stuart russell', 'peter norvig']\n",
-      "Score: 0.56054837\n",
+      "Score: 0.5605484\n",
       "\n",
-      "ID: IgOa7osBiUNHLMdf3q2r\n",
+      "ID: dKRpvY4BKY8PuI1qPluy\n",
       "Publication date: 2008-08-11\n",
       "Title: Clean Code: A Handbook of Agile Software Craftsmanship\n",
       "Summary: A guide to writing code that is easy to read, understand and maintain\n",
       "Publisher: prentice hall\n",
       "Reviews: 55\n",
       "Authors: ['robert c. martin']\n",
-      "Score: 0.54226947\n",
+      "Score: 0.5422694\n",
       "\n",
-      "ID: IAOa7osBiUNHLMdf3q2r\n",
+      "ID: cqRpvY4BKY8PuI1qPluy\n",
       "Publication date: 2019-05-03\n",
       "Title: Python Crash Course\n",
       "Summary: A fast-paced, no-nonsense guide to programming in Python\n",
       "Publisher: no starch press\n",
       "Reviews: 42\n",
       "Authors: ['eric matthes']\n",
-      "Score: 0.5254088\n"
+      "Score: 0.52540874\n"
      ]
     }
    ],
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "WoE0yTchfj3A",
    "metadata": {
     "id": "WoE0yTchfj3A"
@@ -568,16 +568,16 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "ID: HwOa7osBiUNHLMdf3q2r\n",
+      "ID: caRpvY4BKY8PuI1qPluy\n",
       "Publication date: 2019-10-29\n",
       "Title: The Pragmatic Programmer: Your Journey to Mastery\n",
       "Summary: A guide to pragmatic programming for software engineers and developers\n",
       "Publisher: addison-wesley\n",
       "Reviews: 30\n",
       "Authors: ['andrew hunt', 'david thomas']\n",
-      "Score: 0.62065494\n",
+      "Score: 0.6206549\n",
       "\n",
-      "ID: JQOa7osBiUNHLMdf3q2r\n",
+      "ID: d6RpvY4BKY8PuI1qPluy\n",
       "Publication date: 1994-10-31\n",
       "Title: Design Patterns: Elements of Reusable Object-Oriented Software\n",
       "Summary: Guide to design patterns that can be used in any object-oriented language\n",
@@ -602,6 +602,14 @@
     "\n",
     "pretty_response(response)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9edaa20-b8e8-4ce4-99b1-58b81de29dd5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
