add notebook platform to user agent string

--- a/notebooks/search/00-quick-start.ipynb
+++ b/notebooks/search/00-quick-start.ipynb
@@ -156,7 +156,7 @@
     "!curl -O -s https://raw.githubusercontent.com/miguelgrinberg/elasticsearch-labs/notebook-telemetry/telemetry/telemetry.py\n",
     "from telemetry import enable_telemetry\n",
     "\n",
-    "enable_telemetry(client, \"00-quick-start\")"
+    "client = enable_telemetry(client, \"00-quick-start\")"
    ]
   },
   {
