--- a/notebooks/integrations/azure-openai/vector-search-azure-openai-elastic.ipynb
+++ b/notebooks/integrations/azure-openai/vector-search-azure-openai-elastic.ipynb
@@ -92,14 +92,14 @@
    "source": [
     "def generate_embeddings(text):\n",
     "    client = AzureOpenAI(\n",
-    "      api_key = AZURE_OPENAI_API_KEY,  \n",
-    "      api_version = AZURE_OPENAI_API_VERSION,\n",
-    "      azure_endpoint = AZURE_OPENAI_ENDPOINT,\n",
+    "      api_key=AZURE_OPENAI_API_KEY,  \n",
+    "      api_version=AZURE_OPENAI_API_VERSION,\n",
+    "      azure_endpoint=AZURE_OPENAI_ENDPOINT,\n",
     "    )\n",
     "    \n",
     "    response = client.embeddings.create(\n",
-    "        input = text,\n",
-    "        model= AZURE_DEPLOYMENT_ID\n",
+    "        input=text,\n",
+    "        model=AZURE_DEPLOYMENT_ID\n",
     "    )\n",
     "\n",
     "    return response.data[0].embedding\n",
