Added vector search example using Azure OpenAI and Elastic

--- a/notebooks/integrations/azure-openai/vector-search-azure-openai-elastic.ipynb
+++ b/notebooks/integrations/azure-openai/vector-search-azure-openai-elastic.ipynb
@@ -98,8 +98,8 @@
     "    )\n",
     "    \n",
     "    response = client.embeddings.create(\n",
-    "        input=text,\n",
-    "        model=AZURE_DEPLOYMENT_ID\n",
+    "      input=text,\n",
+    "      model=AZURE_DEPLOYMENT_ID,\n",
     "    )\n",
     "\n",
     "    return response.data[0].embedding\n",
