add telemetry to remaining search notebooks

--- a/notebooks/search/00-quick-start.ipynb
+++ b/notebooks/search/00-quick-start.ipynb
@@ -163,16 +163,7 @@
    "id": "d12b707c-e89d-4b43-bee5-edb1beb84839",
    "metadata": {},
    "source": [
-    "### Test the Client"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1462ebd8",
-   "metadata": {
-    "id": "1462ebd8"
-   },
-   "source": [
+    "### Test the Client\n",
     "Before you continue, confirm that the client has connected with this test."
    ]
   },
