--- a/notebooks/search/05-query-rules.ipynb
+++ b/notebooks/search/05-query-rules.ipynb
@@ -111,12 +111,36 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bbc6f297-9773-4240-950e-fa7b4856bb81",
+   "metadata": {},
+   "source": [
+    "### Enable Telemetry\n",
+    "\n",
+    "Knowing that you are using this notebook helps us decide where to invest our efforts to improve our products. We would like to ask you that you run the following code to let us gather anonymous usage statistics. See [telemetry.py](https://github.com/elastic/elasticsearch-labs/blob/main/telemetry/telemetry.py) for details. Thank you!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92d0cadb-4c4b-4ca5-a53f-a36f8f3e9650",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!curl -O -s https://raw.githubusercontent.com/elastic/elasticsearch-labs/main/telemetry/telemetry.py\n",
+    "from telemetry import enable_telemetry\n",
+    "\n",
+    "client = enable_telemetry(client, \"05-query-rules\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1462ebd8",
    "metadata": {
     "id": "1462ebd8"
    },
    "source": [
-    "Confirm that the client has connected with this test."
+    "### Test the Client\n",
+    "Before you continue, confirm that the client has connected with this test."
    ]
   },
   {
@@ -797,7 +821,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.3"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
