--- a/notebooks/search/08-learning-to-rank.ipynb
+++ b/notebooks/search/08-learning-to-rank.ipynb
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -79,18 +79,7 @@
     "id": "IpnP7JUHmOpI",
     "outputId": "eb52c692-a773-4863-f930-fdedb5c6e0eb"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Successfully connected to cluster bd63f706e18b476aacb5cb0aaeb5f0bd (version 8.12.0)'"
-      ]
-     },
-     "execution_count": 100,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from getpass import getpass\n",
     "from elasticsearch import Elasticsearch\n",
@@ -107,8 +96,44 @@
     "    # hosts=[\"http://localhost:9200\"]\n",
     "    cloud_id=ELASTIC_CLOUD_ID,\n",
     "    api_key=ELASTIC_API_KEY,\n",
-    ")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Enable Telemetry\n",
     "\n",
+    "Knowing that you are using this notebook helps us decide where to invest our efforts to improve our products. We would like to ask you that you run the following code to let us gather anonymous usage statistics. See [telemetry.py](https://github.com/elastic/elasticsearch-labs/blob/main/telemetry/telemetry.py) for details. Thank you!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!curl -O -s https://raw.githubusercontent.com/elastic/elasticsearch-labs/main/telemetry/telemetry.py\n",
+    "from telemetry import enable_telemetry\n",
+    "\n",
+    "es_client = enable_telemetry(es_client, \"08-mearning-to-rank\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test the Client\n",
+    "Before you continue, confirm that the client has connected with this test."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "client_info = es_client.info()\n",
     "\n",
     "f\"Successfully connected to cluster {client_info['cluster_name']} (version {client_info['version']['number']})\""
@@ -1172,7 +1197,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1186,7 +1211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.13"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
@@ -1536,5 +1561,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
