fix typo in notebook telemetry code

--- a/notebooks/search/08-learning-to-rank.ipynb
+++ b/notebooks/search/08-learning-to-rank.ipynb
@@ -117,7 +117,7 @@
     "!curl -O -s https://raw.githubusercontent.com/elastic/elasticsearch-labs/main/telemetry/telemetry.py\n",
     "from telemetry import enable_telemetry\n",
     "\n",
-    "es_client = enable_telemetry(es_client, \"08-mearning-to-rank\")"
+    "es_client = enable_telemetry(es_client, \"08-learning-to-rank\")"
    ]
   },
   {
