adding celtics esql example

--- a/notebooks/esql/celtics-esql-demo.ipynb
+++ b/notebooks/esql/celtics-esql-demo.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import required modules\n",
+    "# Import required libraries\n",
     "from io import StringIO  # Used to convert strings to file-like objects\n",
     "from getpass import getpass  # Securely request password or sensitive input\n",
     "from elasticsearch import (\n",
