adding host back in

--- a/notebooks/esql/celtics-esql-demo.ipynb
+++ b/notebooks/esql/celtics-esql-demo.ipynb
@@ -42,7 +42,7 @@
    "source": [
     "# Create an Elasticsearch client instance\n",
     "client = Elasticsearch(\n",
-    "    \"https://[host].elastic-cloud.com\",\n",
+    "    host=getpass(\"Host: \"),\n",
     "    api_key=getpass(\"API Key: \"),  # Securely get the API key for authentication\n",
     ")"
    ]
