--- a/notebooks/esql/celtics-esql-demo.ipynb
+++ b/notebooks/esql/celtics-esql-demo.ipynb
@@ -41,9 +41,12 @@
    ],
    "source": [
     "# Create an Elasticsearch client instance\n",
+    "ELASTIC_HOST = getpass(\"Host: \")\n",
+    "ELASTIC_API_KEY = getpass(\"API Key: \")\n",
+    "\n",
     "client = Elasticsearch(\n",
-    "    host=getpass(\"Host: \"),\n",
-    "    api_key=getpass(\"API Key: \"),  # Securely get the API key for authentication\n",
+    "    host=ELASTIC_HOST,\n",
+    "    api_key=ELASTIC_API_KEY,\n",
     ")"
    ]
   },
