--- a/notebooks/ingestion-and-chunking/website-chunking-ingest.ipynb
+++ b/notebooks/ingestion-and-chunking/website-chunking-ingest.ipynb
@@ -5,12 +5,12 @@
       "metadata": {},
       "source": [
         "# Website load, Extraction and Ingest with ELSER Example\n",
-        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/notebooks/ingestion/json-chunking-ingest.ipynb)\n",
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/notebooks/ingestion/website-chunking-ingest.ipynb)\n",
         "\n",
-        "This workbook demonstrates how to load a JSON file,  create passages and ingest into Elasticsearch. \n",
+        "This workbook demonstrates how to load a website, create passages and ingest into Elasticsearch. \n",
         "\n",
         "In this example we will:\n",
-        "- load the JSON using jq\n",
+        "- load the website using unstructured\n",
         "- chunk the text with LangChain document splitter\n",
         "- ingest into Elasticsearch with LangChain Elasticsearch Vectorstore. \n",
         "\n",
@@ -94,28 +94,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "id": "1U4ffD2K9BkJ"
       },
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            ".elser_model_2 is downloaded and ready to be deployed.\n"
-          ]
-        },
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "KeyboardInterrupt\n",
-            "\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import time\n",
         "\n",
