--- a/notebooks/ingestion-and-chunking/_nbtest.teardown.ipynb
+++ b/notebooks/ingestion-and-chunking/_nbtest.teardown.ipynb
@@ -32,11 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.indices.delete(index=\"*_chunked_index\", ignore_unavailable=True)\n",
-    "try:\n",
-    "    client.ingest.delete_pipeline(id=\"chunk_text_to_passages\")\n",
-    "except:\n",
-    "    pass"
+    "client.indices.delete(index=\"*_chunked_index\", ignore_unavailable=True)"
    ]
   },
   {
