--- a/notebooks/ingestion-and-chunking/website-chunking-ingest.ipynb
+++ b/notebooks/ingestion-and-chunking/website-chunking-ingest.ipynb
@@ -45,7 +45,7 @@
     }
    ],
    "source": [
-    "%pip install -qU  pypdf langchain_community langchain elasticsearch tiktoken langchain-elasticsearch unstructured"
+    "!pip install -qU  pypdf langchain_community langchain elasticsearch tiktoken langchain-elasticsearch unstructured"
    ]
   },
   {
