--- a/notebooks/ingestion-and-chunking/json-chunking-ingest.ipynb
+++ b/notebooks/ingestion-and-chunking/json-chunking-ingest.ipynb
@@ -39,7 +39,7 @@
     }
    ],
    "source": [
-    "%pip install -qU  pypdf langchain_community langchain elasticsearch tiktoken langchain-elasticsearch jq"
+    "!pip install -qU  pypdf langchain_community langchain elasticsearch tiktoken langchain-elasticsearch jq"
    ]
   },
   {
