--- a/notebooks/ingestion-and-chunking/website-chunking-ingest.ipynb
+++ b/notebooks/ingestion-and-chunking/website-chunking-ingest.ipynb
@@ -10,7 +10,7 @@
     "This workbook demonstrates how to load a website, create passages and ingest into Elasticsearch. \n",
     "\n",
     "In this example we will:\n",
-    "- load the website using unstructured\n",
+    "- load the website using the [`unstructured` package](https://python.langchain.com/docs/integrations/providers/unstructured/)\n",
     "- chunk the text with LangChain document splitter\n",
     "- ingest into Elasticsearch with LangChain Elasticsearch Vectorstore. \n",
     "\n",
