added link to blog

--- a/supporting-blog-content/rbac-and-rag-best-friends/rbac-and-rag-best-friends.ipynb
+++ b/supporting-blog-content/rbac-and-rag-best-friends/rbac-and-rag-best-friends.ipynb
@@ -19,7 +19,7 @@
       "cell_type": "markdown",
       "source": [
         "# RBAC with RAG\n",
-        "This code accompanies the blog RBAC with RAG\n",
+        "This code accompanies the blog [RBAC with RAG - Best of Friends](https://www.elastic.co/search-labs/blog/rbac-and-rag-best-friends)\n",
         "\n",
         "It is a simple demonstration of how users assigned to different groups are able to query the same index pattern, but only retrieve documents they should have access to."
       ],
